# parser

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  main.py  pyproject.toml  todos.txt
migrations/: env.py
migrations/versions/: c3e7381c1ecf_init.py
src/: app.py  exceptions.py  hub_parser.py  utils.py
src/models/: __init__.py  article.py  base.py  hub.py
src/schemas/: article.py
src/settings/: postgres_settings.py
